--- a/views/booking_item_edit.erb
+++ b/views/booking_item_edit.erb
@@ -6,10 +6,10 @@
                 <h3 class="block-title"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['category_singular'] %></h3>
               </div>
               <div class="block-content block-content-narrow">
-				<form name="booking_item_form" class="form-horizontal">
-				  <% if @booking_item %>
-				    <input type="hidden" id="reference" name="reference" value="<%=@booking_item.reference%>"/>
-				  <% end %>
+				        <form name="booking_item_form" class="form-horizontal">
+        				  <% if @booking_item %>
+        				    <input type="hidden" id="reference" name="reference" value="<%=@booking_item.reference%>"/>
+        				  <% end %>
 
                   <% if @booking_item_family.stock_model %>
 
@@ -67,6 +67,19 @@
                        <textarea id="description" name="description" class="form-control"><% if @booking_item %><%= @booking_item.description%><%end%></textarea>
                      </div>
                   </div>
+
+                  <% if @multiple_rental_locations %>
+                  <div class="form-group">
+                     <label class="col-md-3 control-label"><%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['logical_organization'] %></label>
+                     <div class="col-md-8">
+                       <select name="rental_storage_id" id="rental_storage_id" class="form-control">
+                          <% @rental_storages.each do |rental_storage| %>
+                            <option value="<%=rental_storage.id%>" <% if rental_storage.id == @booking_item.rental_storage_id %>selected<%end%>><%=rental_storage.name%></option>
+                          <% end %>
+                       </select> 
+                     </div>
+                  </div>   
+                  <% end %>
 
                   <div class="form-group">
                     <div class="col-md-9 col-md-offset-3">
