--- a/views/config_booking_basic.js.erb
+++ b/views/config_booking_basic.js.erb
@@ -74,6 +74,7 @@ require(['jquery','YSDForms'], function($, YSDForms) {
 
             YSDForms.improve();
             YSDForms.limit_text_area_content_size('.variable', 255);
+            configReservationView.update('multiple_locations');
 
             // Multiple rental locations
             <% if booking_item_family and booking_item_family.multiple_locations %>
@@ -82,16 +83,7 @@ require(['jquery','YSDForms'], function($, YSDForms) {
                       var form = $(this.form)[0];
                       YSDForms.submitAjax(form, {
                           successCallback: function(data, textStatus, jqXHR) {
-                            if ($('input[name=booking\\.multiple_rental_locations]').is(':checked')) {
-                              $('#rental_storages_container').show();
-                              $('#rental_locations_container').show();
-                              $('#rental_location_operators_container').show();
-                            }
-                            else {
-                              $('#rental_storages_container').hide();
-                              $('#rental_locations_container').hide();
-                              $('#rental_location_operators_container').hide();
-                            }
+                            configReservationView.update('multiple_locations');
                           }
                       });
                       return false;
@@ -160,6 +152,18 @@ require(['jquery','YSDForms'], function($, YSDForms) {
                     break;
                 case 'timetable_out_of_season':
                     break;
+                case 'multiple_locations':
+                    if ($('input[name=booking\\.multiple_rental_locations]').is(':checked')) {
+                      $('#rental_storages_container').show();
+                      $('#rental_locations_container').show();
+                      $('#rental_location_operators_container').show();
+                    }
+                    else {
+                      $('#rental_storages_container').hide();
+                      $('#rental_locations_container').hide();
+                      $('#rental_location_operators_container').hide();
+                    }                
+                    break;    
             }
         },
 
