--- a/views/booking_items_management.erb
+++ b/views/booking_items_management.erb
@@ -95,7 +95,7 @@
          <% end %>
          <% if @multiple_rental_locations %>
          <th class="table-header-title" scope="col" style="width:100px">
-            <%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['logical_organization'] %>
+            <%= BookingDataSystem.r18n.t.booking_business_literals.business_type[@booking_item_family.business_type.to_s]['physical_organization'] %>
          </th>         
          <% end %>
          <th class="table-header-title" scope="col">
